assets/style/style.css
@import url('https://fonts.googleapis.com/css2?family=Chivo&display=swap');

html {
    font-family: Chivo, sans-serif;
}

p,
span,
h1,
h2,
h3,
h4,
h5,
h6,
li,
a,
input,
label,
button {
    font-family: Montserrat, sans-serif !important;
}

body {
    background-color: #150c25;
    color: #f2f8fa;
}

pre {
    display: block;
    font-size: 87.5%;
    color: inherit;
    background-color: #00000047;
    padding: 15px;
    margin-top: 10px;
    margin-bottom: 10px;
    border-radius: 10px;
}

textarea,
input {
    font-family: monospace !important;
    background-color: #fff;
    border-style: dashed;
    border-width: 2px;
    border-radius: 8px;
    margin-bottom: 5px;
    width: 100%;
    height: 43px;
    margin-bottom: 14px;
    transition: all .125s ease-in-out;
}

#privateKey {
    text-align: center;
}

button {
    color: rgba(255, 255, 255, 0.65);
    border-radius: 15px;
    padding: 12px 25px 12px;
    background-color: #380c6a;
    border-style: solid;
    border-width: 1px;
    margin: 1px;
    border-color: #7300ff;
    text-align: center;
    font-size: 16px;
    outline: 0;
    transition: all .2s ease-in-out;
}

.hide-element {
    width: 0px;
    height: 0px;
    opacity: 0;
}

.fa-tiny-margin {
    margin-top: 4px;
}

.ptr {
    cursor: pointer;
}

.fa-stacked-ptr {
    cursor: pointer;
    margin-right: 15px;
}

.nav-logo {
    display: inline;
    vertical-align: middle;
    width: 150px;
}

.nav-link {
    font-weight: 500;
    font-size: 16px;
}

.nav-item {
    margin-left: 15px;
}

.navButton {
    color: #999;
}

.navButton:hover {
    color: #334758 !important;
}

.alert-danger {
    color: #fff;
    background-color: #ffabb361;
    border-color: #ba0014;
}

.nav-link {
    color: rgb(255, 255, 255) !important;
}

.nav-link:hover {
    color: rgba(255, 255, 255, 0.75) !important;
}

.minor-notif-subtext {
    opacity: 0.5;
    padding: 10px 5px 30px;
    text-align: center;
}

input::-moz-focus-inner {
    border: 0;
}

.large-box {
    background: rgba(43, 9, 80, 0.55);
    border-radius: 8px;
    border-color: #6222ab;
    border-width: 1px;
    border-style: solid;
    margin: 5px;
}

.large-box:hover {
    background: linear-gradient(217deg, rgb(51, 0, 153, 0.1), rgb(34, 0, 102, 0.3) 70.71%);
    border-color: #763acf;

}

#qrModal.modal {
    width: auto;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.modal {
    color: black;
}

.modal-label {
    position: relative;
    top: 20px;
    font-family: monospace;
    font-size: small;
}

.auto-fit {
    width: 100%;
    height: auto;
}

@keyframes disco {
    from {
        filter: hue-rotate(0deg);
    }

    to {
        filter: hue-rotate(360deg);
    }
}

.discoFilter {
    animation-name: disco;
    animation-duration: 2s;
    animation-iteration-count: infinite;
    animation-play-state: running;
    animation-timing-function: linear;
}

.reload {
    position: relative;
    top: 16px;
    left: 10px;
    display: inline-block;
    font-family: Lucida Sans Unicode;
    cursor: pointer;
    animation-name: spinner;
    animation-duration: 0.75s;
    animation-play-state: paused;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
}

.playAnim {
    animation-play-state: running;
}

@keyframes spinner {
    0% {
        transform: translate3d(-50%, -50%, 0) rotate(0deg);
    }

    100% {
        transform: translate3d(-50%, -50%, 0) rotate(360deg);
    }
}

.noselect {
    -webkit-touch-callout: none;
    /* iOS Safari */
    -webkit-user-select: none;
    /* Safari */
    -khtml-user-select: none;
    /* Konqueror HTML */
    -moz-user-select: none;
    /* Old versions of Firefox */
    -ms-user-select: none;
    /* Internet Explorer/Edge */
    user-select: none;
    /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
}

.innerShadow {
    -webkit-box-shadow: inset hsla(0, 0%, 100%, .25) 0 2px 2px, inset rgba(0, 0, 0, .6) 0 -1px 8px;
    box-shadow: inset 0 2px 2px hsla(0, 0%, 100%, .25), inset 0 -1px 8px rgba(0, 0, 0, .6);
}

.seed-phrase {
    font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
    background-color: #00000014;
    color: #8e21ff;
    margin: 10px;
    padding: 10px;
    border-radius: 8px;
}

/* a bootstrap override */
.modal-footer {
    display: block !important;
}

.inline-address {
    font-family: mono;
    background-color: #00000014;
    color: #8e21ff;
    margin: 10px;
    padding: 3px;
    border-radius: 8px;
    display: inline;
}


#page-container {
    position: relative;
    min-height: calc(100vh - 75px);
}

#content-wrap {
    padding-bottom: 4rem;
    /* Footer height */
    margin-top: 75px;
}

@media (max-width: 768px) {
  #content-wrap {
    margin-top:40px
  }

  #page-container {
    min-height: calc(100vh - 40px);
  }
}

.rm-pd {
    padding: 15px 15px 40px;
}

.max-width {
    width: 100%;
}

/* Style the tab */
.tab {
    overflow: hidden;
    border: 1px solid #080808;
    background-color: #000000;
}

/* Style the buttons inside the tab */
.tab button {
    background-color: inherit;
    color: #ecd3af;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 14px 16px;
    transition: 0.3s;
    font-size: 17px;
}

/* Change background color of buttons on hover */
.tab button:hover {
    background-color: #334758 !important;
}

/* Create an active/current tablink class */
.tab button.active {
    background-color: #b088ff !important;
}

.active {
    color: #b088ff !important;
}

/* Style the tab content */
.tabcontent {
    font-family: sans-serif;
    display: none;
    border-radius: 8px;
}

#Transaction.tabcontent {
    padding-bottom: 100px;
}


.frame {
    display: block;
    margin: 0 auto;
    background: #2B0950BF;
}

/* DASHBOARD */

#guiWallet {
    width: 100%;
    height: 700px;
}
/* ... */

